# ICTV-git

./: .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_IMPLEMENTATION_PLAN.md  API_IMPLEMENTATION_COMPLETE.md  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_20_YEAR_HISTORICAL_CONVERSION.md  CONTRIBUTING.md  HISTORICAL_CONVERSION_COMPLETE.md  LICENSE  MANIFEST.in  MANUSCRIPT_FINDINGS.md  MANUSCRIPT_FINDINGS_COMPREHENSIVE.md  PHASE_5_SUMMARY.md  PREFLIGHT_CHECKLIST.md  README.md  REAL_DATA_SUMMARY.md  REPOSITORY_POLISH_COMPLETE.md  REPOSITORY_POLISH_PLAN.md  SECURITY.md  SETUP.md  SUPPORT.md  git_taxonomy_project.md  manuscript_findings.json  manuscript_findings_v2.json  manuscript_findings_v3.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_api.txt  research_implementation_plan.md  setup.py  viral_taxonomy_research_ideas.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docs.yml  release-drafter.yml  release.yml  security.yml  stale.yml  tests.yml
data/: README.md  caudovirales_analysis.txt  example_dataset.csv  example_dataset_mapping_report_msl36_to_msl37.json  example_dataset_migrated_msl37.csv
data/sample/: README.md  sample_msl_data.csv
docs/: SYSTEM_VALIDATION.md  TAXONOMY_CHANGE_PATTERNS.md  _config.yml  api_reference.md  api_usage_examples.md  getting-started.md  index.md
examples/: 01_getting_started.py
git_taxonomy_demo/: GIT_TAXONOMY_DEMONSTRATION.md  caudovirales_case_study.py  create_visual_demo.py
ictv_dashboard/: .gitignore  DEPLOYMENT.md  README.md  app.py  requirements.txt
ictv_dashboard/.streamlit/: config.toml
ictv_dashboard/components/: risk_engine.py  scenario_planner.py  visualizations.py
ictv_dashboard/config/: settings.py
ictv_dashboard/pages/: analytics_trends.py  committee_workflow.py
ictv_dashboard/utils/: authentication.py  data_manager.py  report_generator.py
implementation/: INTERACTIVE_DASHBOARD_IMPLEMENTATION_PLAN.md
implementation/predictive_framework/: README.md  create_risk_dashboard.py  family_risk_assessment.json  family_risk_predictor.py  intervention_recommender.py  quarterly_intervention_report.json
research/: __init__.py  base_analyzer.py  virus_host_database_comparison.md
research/MOCK_DATA_ARCHIVE/: README_MOCK_DATA_ARCHIVE.md  family_size_analysis_report_MOCK.txt  family_size_detailed_findings_MOCK.md
research/comprehensive_summary/: COMPREHENSIVE_RESEARCH_SUMMARY.md  GUIDING_PRINCIPLES_AND_RECOMMENDATIONS.md  create_integrated_visualizations.py
research/discovery_method_evolution/: DISCOVERY_METHOD_EVOLUTION_FINDINGS.md  create_discovery_plots.py  discovery_method_analysis.py
research/family_size_analysis/: REAL_DATA_FINDINGS.md  __init__.py  analyzer.py  basic_analysis.py  create_matplotlib_plots.py  create_real_plots.py  real_visualizations.py  text_visualizations.py  visualizations.py
research/family_size_optimization/: FAMILY_SIZE_OPTIMIZATION_FINDINGS.md  create_size_optimization_plots.py  family_size_analysis.py
research/genome_architecture_stability/: GENOME_ARCHITECTURE_STABILITY_FINDINGS.md  create_architecture_plots.py  genome_architecture_analysis.py
research/host_range_stability/: HOST_RANGE_STABILITY_FINDINGS.md  create_host_range_plots.py  host_range_analysis.py
research/host_type_discovery_bias/: HOST_TYPE_DISCOVERY_BIAS_FINDINGS.md  create_bias_plots.py  host_bias_analysis.py
research/species_boundary_evolution/: SPECIES_BOUNDARY_EVOLUTION_FINDINGS.md  create_boundary_plots.py  species_boundary_analysis.py
research/temporal_evolution_analysis/: TEMPORAL_EVOLUTION_FINDINGS.md  create_temporal_plots.py  temporal_analysis.py
scripts/: analyze_caudovirales_migration.py  analyze_unstable_classifications.py  benchmark_advanced_features.py  caudovirales_analysis.py  complete_20_year_conversion.py  complete_historical_conversion.py  convert_full_history.py  convert_msl.py  create_interactive_dashboard.py  create_sample_data.py  demo_advanced_features.py  demo_nlq.py  download_msl.py  enhanced_caudovirales_analysis.py  export_msl_to_csv.py  fix_genomics_era_analysis.py  generate_visual_report.py  longitudinal_analysis.py  migrate_dataset.py  minimal_historical_conversion.py  research_summary.py  run_api_server.py  run_nlq_chat.py  run_taxonomy_api.py  run_taxonomy_browser.py  setup_dev_environment.sh  simple_historical_conversion.py  simple_visualization.py  taxonomy_lookup.py  test_parser.py  update_all_visualizations.py  working_historical_conversion.py
src/: __init__.py  minimal_excel_reader.py  msl_parser.py  simple_msl_parser.py
src/advanced_features/: __init__.py  classification_ai.py  database_sync.py  nlq_interface.py
src/api/: __init__.py  ai_api.py  historical_api.py  rest_server.py  search_api.py  taxonomy_api.py
src/community_tools/: __init__.py  citation_generator.py  taxonomy_api.py  taxonomy_browser.py  version_comparator.py
src/converters/: __init__.py  msl_to_git.py
tests/: __init__.py  test_api.py  test_api_endpoints.py  test_comparators.py  test_converters.py  test_nlq_interface.py  test_parsers.py
(+51 files in other folders)
